feat: consolidate database migrations and add email/password authentication
## Database Migration
- Consolidated V1, V2, V3 migrations into single V1__initial_schema.sql
- Added Flyway for automated database migrations
- Removed schema.sql Docker mount (now using Flyway exclusively)
- Rebuilt database from scratch with clean V1 migration

## Authentication Features
- Added email/password authentication fields to User entity
- Added social auth support (Apple, Google)
- Created auth_sessions, password_reset_tokens, magic_link_tokens, email_verification_tokens tables
- Added user profile fields: real_name, is_guest, avatar_emoji
- Added status tracking: status, removal_reason, removed_at
- Added activity tracking: last_active_at, wasted_tickets_count, total_tickets_generated

## Country Tracking
- Added belongs_to field for country of origin (ISO 3166-1 alpha-2)
- 2-letter uppercase country code with validation constraint
- Indexed for efficient country-based queries

## Tickets Enhancement
- Added ticket_code for QR/link sharing
- Added next_position for tracking invitee position
- Added 3-strike rule support: attempt_number, rule_version

## Security & Configuration
- Updated CORS configuration with specific allowed origins
- Removed permissive wildcard CORS settings
- Made device_id and device_fingerprint nullable
- Added unique constraints for email, social auth IDs

## Tests
- Fixed UserTest, AuthServiceTest, ChainStatsServiceTest
- Removed references to deprecated geo-location fields

## Schema Summary
- 8 tables: users, tickets, attachments, auth_sessions, password_reset_tokens, magic_link_tokens, email_verification_tokens, flyway_schema_history
- 17 indexes for performance
- Complete authentication infrastructure
- Seed user: The Seeder (position 1, US, status: seed)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>